# Dynamic-Route-Optimization

./: .gitignore  DynamicRoute.slnx  README.md  fuatefeozdemir.lnk
RouteEngine/: CMakeLists.txt  LinkedList.cpp  LinkedList.h  Node.cpp  Node.h  Point.h
RouteEngine/API/: EngineAPI.cpp  EngineAPI.h
RouteEngine/Algorithms/: DijkstraSolver.cpp  DijkstraSolver.h
RouteEngine/Collections/: LinkedList.cpp  LinkedList.h  Queue.cpp  Queue.h  Set.cpp  Set.h  Stack.cpp  Stack.h
RouteEngine/Collections/PriorityQueues/: ArrayQueue.cpp  ArrayQueue.h  BSTQueue.cpp  BSTQueue.h  MinHeap.cpp  MinHeap.h
RouteEngine/Core/: Metrics.h  Node.cpp  Node.h  Point.h  Timer.cpp  Timer.h
RouteEngine/Graph/: GridGraph.cpp  GridGraph.h
RouteEngine/PriorityQueues/: ArrayQueue.cpp  BSTQueue.cpp  MinHeap.h
RouteUI/: EngineBridge.cs  Form1.Designer.cs  Form1.cs  Program.cs  RouteUI.csproj
RouteUI/Controllers/: ActionManager.cs  SimulationEngine.cs
RouteUI/Forms/: MainForm.Designer.cs  MainForm.cs
RouteUI/Interop/: EngineBridge.cs
RouteUI/Logic/: GridState.cs  RouteManager.cs
RouteUI/Models/: Enums.cs  Metrics.cs  NodeModel.cs  UserAction.cs
RouteUI/Rendering/: GridRenderer.cs
